--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
@@ -124,9 +124,8 @@ Arguments:
 			</ao:choose>
 			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
 			<!-- ao-web-resources -->
-			<wr:styles groups="semanticcms-theme-documentation" />
+			<wr:renderStyles activate="ao-style, semanticcms-theme-documentation-style" />
 			<!-- Per-view links -->
-			<!-- TODO: Move to RegistryEE -->
 			<c:forEach var="link" items="${core:getViewLinks(null, page)}">
 				<ao:link link="${link}" />
 			</c:forEach>
