--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2020-03-04T14:00:20-0600"
+		dateModified="2020-03-07T06:01:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-theme-documentation:pom.version}" />
@@ -49,12 +49,16 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Minimum Java version changed from 1.7 to 1.8.</li>
+					<li>
+						Reduced use of property substitutions in <code>pom.xml</code>.
+						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+					</li>
 					<li>Fixed bug in <code>error.inc.jsp</code> that didn't pass <code>contentRoot</code> correctly.</li>
 					<li>Optimized ServletContext attribute initialization and concurrency.</li>
 					<li>Integrated with <ao:a href="https://aoindustries.com/ao-web-resources/">AO Web Resources</ao:a>.</li>
@@ -69,9 +73,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.8.0"
 			datePublished="2019-10-12T01:00:20-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>
@@ -85,9 +89,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.7.0"
 			datePublished="2019-06-22T05:45:18-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -109,9 +113,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.6.2"
 			datePublished="2017-07-20T14:37:18-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New release for bug fixes in underlying <ao:a href="https://aoindustries.com/ao-encoding/">AO Encoding</ao:a> library.</li>
@@ -123,9 +127,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.6.1"
 			datePublished="2016-11-16T06:56:44-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Added googleoff / googleon around the frames links.</li>
@@ -139,9 +143,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.6.0"
 			datePublished="2016-10-20T19:36:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -158,9 +162,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.5.1"
 			datePublished="2016-10-11T20:52:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>display-name defined in web-fragment.xml was causing "The display name was defined in multiple fragments with different value"</li>
@@ -172,9 +176,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.5.0"
 			datePublished="2016-10-04T23:12:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -188,9 +192,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.4"
 			datePublished="2016-09-11T17:26:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Use dependencyManagement instead of dependency for junit.</li>
@@ -205,9 +209,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.3"
 			datePublished="2016-09-03T11:11:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Maven configuration for Java EE 6 dependencies.</li>
@@ -218,9 +222,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.2"
 			datePublished="2016-08-28T20:57:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Fixed package name to moved file.</li>
@@ -244,9 +248,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.1"
 			datePublished="2016-08-21T18:33:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Implementation-specific book attributes changed to parameters.</li>
@@ -258,9 +262,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			projectName="@{documented.name}"
 			version="1.0"
 			datePublished="2016-08-19T16:47:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Project moved to GitHub and Maven.</li>
