--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2020-04-28T04:10:37-05:00"
+		dateModified="2020-08-19T23:27:36-05:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-theme-documentation:pom.version}" />
@@ -52,7 +52,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Now URI-encoding dependency versions obtained at runtime.</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
