--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.jspx
@@ -33,6 +33,7 @@ Arguments:
 	xmlns:ao="https://aoindustries.com/ao-taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:core="https://semanticcms.com/core/taglib/"
+	xmlns:encoding="https://aoindustries.com/ao-encoding/taglib/"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:wr="https://aoindustries.com/ao-web-resources/taglib/"
@@ -97,7 +98,7 @@ Arguments:
 		</c:if>
 		<head>
 			<c:choose>
-				<c:when test="${ao:getDoctype() == 'HTML5'}">
+				<c:when test="${encoding:getDoctype() == 'HTML5'}">
 					<ao:meta charset="${pageContext.response.characterEncoding}" />
 				</c:when>
 				<c:otherwise>
