--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -32,6 +32,7 @@ Arguments:
 	xmlns:ao="https://aoindustries.com/ao-taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:core="https://semanticcms.com/core/taglib/"
+	xmlns:encoding="https://aoindustries.com/ao-encoding/taglib/"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:wr="https://aoindustries.com/ao-web-resources/taglib/"
@@ -46,7 +47,7 @@ Arguments:
 	<ao:html doctype="HTML5">
 		<head>
 			<c:choose>
-				<c:when test="${ao:getDoctype() == 'HTML5'}">
+				<c:when test="${encoding:getDoctype() == 'HTML5'}">
 					<ao:meta charset="${pageContext.response.characterEncoding}" />
 				</c:when>
 				<c:otherwise>
