--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2020-11-19T00:46:33-06:00"
+		dateModified="2020-11-27T21:56:25-06:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-theme-documentation:pom.version}" />
@@ -55,22 +55,34 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			>
 				<ul>
 					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
-					<li>Now URI-encoding dependency versions obtained at runtime.</li>
-					<li>
-						<p>
-							Switched to <ao:a href="https://www.npmjs.com/">NPM</ao:a>-based <ao:a href="https://www.webjars.org/">WebJars</ao:a>
-							in groupId <code><ao:a href="https://search.maven.org/search?q=g:org.webjars.npm">org.webjars.npm</ao:a></code>,
-							where possible.  The NPM WebJars seem more up-to-date and actively supported than Classic WebJars.
-						</p>
-						<p>
-							Furthermore, <ao:a href="https://snyk.io/blog/bower-is-dead/">Bower has been deprecated</ao:a>,
-							so we are reluctant to use either "Bower GitHub" or "Bower Original" WebJars.
-						</p>
-					</li>
-					<li>Updated dependencies.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.11.0"
+			datePublished="2020-11-27T21:56:25-06:00"
+			groupId="@{project.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{project.scm.url}"
+		>
+			<ul>
+				<li>Now URI-encoding dependency versions obtained at runtime.</li>
+				<li>
+					<p>
+						Switched to <ao:a href="https://www.npmjs.com/">NPM</ao:a>-based <ao:a href="https://www.webjars.org/">WebJars</ao:a>
+						in groupId <code><ao:a href="https://search.maven.org/search?q=g:org.webjars.npm">org.webjars.npm</ao:a></code>,
+						where possible.  The NPM WebJars seem more up-to-date and actively supported than Classic WebJars.
+					</p>
+					<p>
+						Furthermore, <ao:a href="https://snyk.io/blog/bower-is-dead/">Bower has been deprecated</ao:a>,
+						so we are reluctant to use either "Bower GitHub" or "Bower Original" WebJars.
+					</p>
+				</li>
+				<li>Updated dependencies.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
