--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
@@ -34,7 +34,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		title="@{documented.name}"
 		description="@{documented.description}"
 		datePublished="2016-10-19T02:33:00-05:00"
-		dateModified="2021-07-15T17:33:32-05:00"
+		dateModified="2021-07-16T03:48:08-05:00"
 	>
 		<core:child page="changelog" />
 		<core:child page="apidocs/" />
@@ -54,6 +54,12 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				arg.mavenBadge="maven-central"
 				arg.groupId="@{project.groupId}"
 				arg.artifactId="@{documented.artifactId}"
+				arg.sonarQualityGate="true"
+				arg.sonarLinesOfCode="true"
+				arg.sonarReliability="true"
+				arg.sonarSecurity="true"
+				arg.sonarMaintainability="true"
+				arg.sonarCoverage="true"
 			/>
 		</header>
 		<p>
